src/objects/dyfr__Tab__c.object
<CustomObject>
    <fields>
        <fullName>dyfr__Column_Number__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Column Number</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Save_APEX_Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Save APEX Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Show_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Tab_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tab Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dyfr__Template__c</fullName>
        <label>Template</label>
        <referenceTo>dyfr__Template__c</referenceTo>
        <relationshipLabel>Tabs</relationshipLabel>
        <relationshipName>Tabs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tab</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tabs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>